completed application, added locations, updated css to make more respoonsive, added pagination to liked list

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  background-color: grey;
+  background-image: conic-gradient(from 0deg, orange, orangered, orange);
 }
 
 body {
